--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 
     <style>
-        #employee-table th,
+        #train-timetable th,
         td {
             display: inline-block;
             width: 20%;
@@ -46,7 +46,7 @@
                 <div class="card mb-4">
                     <div class="card-header">Current Train Schedule</div>
                     <div class="card-body">
-                        <table class="table table-sm table-hover" id='employee-table'>
+                        <table class="table table-sm table-hover" id='train-timetable'>
                             <thead>
                                 <tr>
                                     <th scope="col">Train Name</th>
@@ -83,8 +83,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="start-input">First Train Time (HH:mm - Military Time)</label>
-                                <input class="form-control" id="first-train-time-input"
-                                    type="text">
+                                <input class="form-control" id="first-train-time-input" type="text">
                             </div>
                             <div class="form-group">
                                 <label for="rate-input">Frequency (min)</label>
