--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
+    <link rel="stylesheet" href="./assets/style.css">
+
     <!-- Firebase Reference -->
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase.js"></script>
 
@@ -51,7 +53,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <!-- Add Employee  -->
-                                    <div class="card mb-4">
+                                    <div id="card" class="card mb-4">
                                         <div class="card-header">Add Train</div>
                                         <div class="card-body">
 
