--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <div class="col-md-12">
 
-                <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
+                <div id="modal" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
                     aria-labelledby="myLargeModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
